# mip_channel_tools

./: .gitignore  README.md  adding_a_package.md  pyproject.toml
.github/workflows/: assemble-index.yml  build-package.yml  build-request.yml  download-stats.yml  pr-build.yml  push-build.yml  scheduled-build.yml  submit-package-request.yml
mexopts/linux_x86_64/: g++.xml  gcc.xml
mexopts/macos_arm64/: clang++.xml  clang.xml  g++.xml  gcc.xml
mexopts/macos_x86_64/: g++.xml  gcc.xml
notes/: LINUX-LIBSTDCXX-ASNEEDED.md  LOCAL-BUILD.md  MACOS-DEPLOYMENT-TARGET.md  MACOS-MEX-CPP-LINKER.md  MATLAB-GCC.md  MATLAB-GLIBC.md  MATLAB-MINGW.md  MEX-RUNTIME-LIBS.md  MEXOPTS.md  MIP-YAML-BUILDS.md  README.md  WINDOWS-TAR-XZ.md
scripts/: bundle_one.m  bundle_runtime_libs.m  copy_and_sanitize_lib.m  dynamic_lib_ext.m  local_build.sh  setup_mex_compilers.m  system_echo.m  test_one.m
site/: README.md  index.html
src/mip_channel_tools/: __init__.py  affected.py  build_request.py  cli.py  config.py  download_stats.py  index.py  isa_level.py  local_build.py  package_setup.py  prepare.py  scheduled.py  submit_package_request.py  upload.py
tests/: test_download_stats.py  test_index.py  test_isa_level.py  test_prepare.py  test_submit_package_request.py  test_upload.py
vcpkg-triplets/: x64-windows-static-md.cmake  x64-windows.cmake
