[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mip-channel-tools"
version = "0.1.0"
description = "Build, index, and release tooling shared by MIP package channels."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "pyyaml",
]

[project.scripts]
mip-channel = "mip_channel_tools.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
